--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     height: 50px;
     background-image: url('img/dice6.png');
 }
-.playerturn{
+.playerTurn{
     display: inline-block;
     background-color: antiquewhite;
     width: 50px;
@@ -35,8 +35,8 @@ body{
     width: 600px;
     height: 600px;
 }
-.boardoverlay{
-    top: 0px;
+.boardOverlay{
+    top: 70px;
     position: absolute;
     background-image: url('img/snakes.png');
     width: 600px;
@@ -48,6 +48,7 @@ body{
     background-size: contain;
     width: 20px;
     height: 20px;
+    display: none;
 }
 .pawn0{
     background-image: url('img/pawn0.png');
